; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_core.c_bcma_core_enable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/bcma/extr_core.c_bcma_core_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_device = type { i32 }

@BCMA_IOCTL = common dso_local global i32 0, align 4
@BCMA_IOCTL_CLK = common dso_local global i32 0, align 4
@BCMA_IOCTL_FGC = common dso_local global i32 0, align 4
@BCMA_RESET_CTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bcma_core_enable(%struct.bcma_device* %0, i32 %1) #0 {
  %3 = alloca %struct.bcma_device*, align 8
  %4 = alloca i32, align 4
  store %struct.bcma_device* %0, %struct.bcma_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @bcma_core_disable(%struct.bcma_device* %5, i32 %6)
  %8 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %9 = load i32, i32* @BCMA_IOCTL, align 4
  %10 = load i32, i32* @BCMA_IOCTL_CLK, align 4
  %11 = load i32, i32* @BCMA_IOCTL_FGC, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* %4, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @bcma_awrite32(%struct.bcma_device* %8, i32 %9, i32 %14)
  %16 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %17 = load i32, i32* @BCMA_IOCTL, align 4
  %18 = call i32 @bcma_aread32(%struct.bcma_device* %16, i32 %17)
  %19 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %20 = load i32, i32* @BCMA_RESET_CTL, align 4
  %21 = call i32 @bcma_awrite32(%struct.bcma_device* %19, i32 %20, i32 0)
  %22 = call i32 @udelay(i32 1)
  %23 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %24 = load i32, i32* @BCMA_IOCTL, align 4
  %25 = load i32, i32* @BCMA_IOCTL_CLK, align 4
  %26 = load i32, i32* %4, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @bcma_awrite32(%struct.bcma_device* %23, i32 %24, i32 %27)
  %29 = load %struct.bcma_device*, %struct.bcma_device** %3, align 8
  %30 = load i32, i32* @BCMA_IOCTL, align 4
  %31 = call i32 @bcma_aread32(%struct.bcma_device* %29, i32 %30)
  %32 = call i32 @udelay(i32 1)
  ret i32 0
}

declare dso_local i32 @bcma_core_disable(%struct.bcma_device*, i32) #1

declare dso_local i32 @bcma_awrite32(%struct.bcma_device*, i32, i32) #1

declare dso_local i32 @bcma_aread32(%struct.bcma_device*, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
